[package]
name = "dolly"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Composable camera rigs"
repository = "https://github.com/h3r2tic/dolly"
documentation = "https://docs.rs/dolly"
keywords = ["gamedev", "camera"]
categories = ["game-development"]
readme = "crates-io.md"
rust-version = "1.68.2"

[dependencies]
bevy_math = "0.15.0"
bevy_transform = "0.15.0"
